[Resource - query] Add comment for all table

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -1,5 +1,43 @@
-sp_GetAllBrands=call joshua_sp_GetAllBrands();
-sp_GetBrandWithId=call joshua_sp_GetBrandWithId(?);
-sp_CreateNewBrand=call joshua_sp_CreateNewBrand(?,?,?,?);
-sp_UpdateBrand=call joshua_sp_UpdateBrand(?,?,?,?,?);
-sp_DeleteBrand=call joshua_sp_DeleteBrand(?);
+# Address
+
+# Banner
+
+# Brand
+sp_GetAllBrand=call sp_GetAllBrand();
+sp_GetBrandWithId=call sp_GetBrandWithId(?);
+sp_CreateNewBrand=call sp_CreateNewBrand(?,?,?,?);
+sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?);
+sp_DeleteBrand=call sp_DeleteBrand(?);
+
+# Cart
+
+# Category
+
+# Comment
+
+# Discount
+
+# Feedback
+
+# Import
+
+# Invoice
+
+# Label
+
+# Product
+
+# Product - Accessory
+# Product - Discount
+# Product - Label
+# Product - Image
+
+# Product - Unit
+
+# RefreshToken
+
+# Role
+
+# User
+
+# User - Role
