[Resource - query list] Update list call procedure

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -1,26 +1,171 @@
 # Address
+sp_FindAllAddress=call sp_FindAllAddress();
+sp_FindAddressById=call sp_FindAddressById(?);
+sp_FindAddressByUserId=call sp_FindAddressByUserId(?);
+sp_InsertNewAddress=call sp_InsertNewAddress(?,?,?,?,?,?,?);
+sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?);
+sp_DeleteAddress=call sp_DeleteAddress(?);
 # Banner
+sp_FindAllBanners=call sp_FindAllBanners();
+sp_FindAllBannersLimit=call sp_FindAllBannersLimit(?,?);
+sp_FindBannerById=call sp_FindBannerById(?);
+sp_FindBannerByType=call sp_FindBannerByType(?);
+sp_FindBannerByDateRange=call sp_FindBannerByDateRange(?,?);
+sp_FindBannerByDate=call sp_FindBannerByDate(?);
+sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?);
+sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?);
+sp_DeleteBanner=call sp_DeleteBanner(?);
 # Brand
-sp_GetAllBrand=call sp_GetAllBrand();
-sp_GetBrandWithId=call sp_GetBrandWithId(?);
-sp_CreateNewBrand=call sp_CreateNewBrand(?,?,?,?);
+sp_FindAllBrands=call sp_FindAllBrands();
+sp_FindAllBrandsLimit=call sp_FindAllBrandsLimit(?,?);
+sp_FindBrandById=call sp_FindBrandById(?);
+sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?);
 sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?);
 sp_DeleteBrand=call sp_DeleteBrand(?);
 # Cart
+sp_FindCartByUserId=call sp_FindCartByUserId(?);
+sp_InsertNewCart=call sp_InsertNewCart(?,?,?);
+sp_UpdateCart=call sp_UpdateCart(?,?,?);
+sp_DeleteCart=call sp_DeleteCart(?);
 # Category
+sp_FindAllCategories=call sp_FindAllCategories();
+sp_FindAllCategoriesLimit=call sp_FindAllCategoriesLimit(?,?);
+sp_FindCategoryById=call sp_FindCategoryById(?);
+sp_InsertNewCategory=call sp_InsertNewCategory(?,?,?);
+sp_UpdateCategory=call sp_UpdateCategory(?,?,?,?);
+sp_DeleteCategory=call sp_DeleteCategory(?);
 # Comment
+sp_FindAllComments=call sp_FindAllComments();
+sp_FindAllCommentsLimit=call sp_FindAllCommentsLimit(?,?);
+sp_FindCommentById=call sp_FindCommentById(?);
+sp_FindCommentByProductId=call sp_FindCommentByProductId(?);
+sp_FindCommentByUserPhone=call sp_FindCommentByUserPhone(?);
+sp_InsertNewComment=call sp_InsertNewComment(?,?,?,?,?);
+sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?);
+sp_DeleteComment=call sp_DeleteComment(?);
 # Discount
+sp_FindAllDiscounts=call sp_FindAllDiscounts();
+sp_FindAllDiscountsLimit=call sp_FindAllDiscountsLimit(?,?);
+sp_FindDiscountById=call sp_FindDiscountById(?);
+sp_FindDiscountByProductId=call sp_FindDiscountByProductId(?);
+sp_FindDiscountByType=call sp_FindDiscountByType(?);
+sp_FindDiscountByCode=call sp_FindDiscountByCode(?);
+sp_FindDiscountByDateRange=call sp_FindDiscountByDateRange(?,?);
+sp_FindDiscountOfProductUseInDate=call sp_FindDiscountOfProductUseInDate(?,?);
+sp_InsertNewDiscount=call sp_InsertNewDiscount(?,?,?,?,?,?);
+sp_UpdateDiscount=call sp_UpdateDiscount(?,?,?,?,?,?,?);
+sp_DeleteDiscount=call sp_DeleteDiscount(?);
 # Feedback
+sp_FindAllFeedbacks=call sp_FindAllFeedbacks();
+sp_FindAllFeedbacksLimit=call sp_FindAllFeedbacksLimit(?,?);
+sp_FindFeedbackById=call sp_FindFeedbackById(?);
+sp_FindFeedbackByProductId=call sp_FindFeedbackByProductId(?);
+sp_FindFeedbackByUserId=call sp_FindFeedbackByUserId(?);
+sp_FindFeedbackByRatingPoint=call sp_FindFeedbackByRatingPoint(?);
+sp_FindFeedbackByProductIdAndRatingPoint=call sp_FindFeedbackByProductIdAndRatingPoint(?,?);
+sp_InsertNewFeedback=call sp_InsertNewFeedback(?,?,?,?);
+sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?);
+sp_DeleteFeedback=call sp_DeleteFeedback(?,?,?);
 # Import
+sp_FindAllImports=call sp_FindAllImports();
+sp_FindAllImportsLimit=call sp_FindAllImportsLimit(?,?);
+sp_FindImportById=call sp_FindImportById(?);
+sp_FindImportByProductId=call sp_FindImportByProductId(?);
+sp_FindImportProductByDate=call sp_FindImportProductByDate(?);
+sp_FindImportProductByDateRange=call sp_FindImportProductByDateRange(?,?);
+sp_InsertNewImport=call sp_InsertNewImport(?,?,?,?,?);
+sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?);
+sp_DeleteImport=call sp_DeleteImport(?);
 # Invoice
+sp_FindAllInvoices=call sp_FindAllInvoices();
+sp_FindAllInvoicesLimit=call sp_FindAllInvoicesLimit(?,?);
+sp_FindInvoiceById=call sp_FindInvoiceById(?);
+sp_FindInvoiceByUserId=call sp_FindInvoiceByUserId(?);
+sp_FindInvoiceByPaymentType=call sp_FindInvoiceByPaymentType(?);
+sp_FindInvoiceByOrderStatus=call sp_FindInvoiceByOrderStatus(?);
+sp_FindInvoiceByPaidStatus=call sp_FindInvoiceByPaidStatus(?);
+sp_FindInvoiceByAddress=call sp_FindInvoiceByAddress(?);
+sp_FindInvoiceByDate=call sp_FindInvoiceByDate(?);
+sp_FindInvoiceByDateRange=call sp_FindInvoiceByDateRange(?,?);
+sp_InsertNewInvoice=call sp_InsertNewInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateInvoiceStatus=call sp_UpdateInvoiceStatus(?,?);
+sp_UpdateInvoicePaymentMethodAndPaidStatus=call sp_UpdateInvoicePaymentMethodAndPaidStatus(?,?,?);
+sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_DeleteInvoice=call sp_DeleteInvoice(?);
 # Label
+sp_FindAllLabels=call sp_FindAllLabels();
+sp_FindAllLabelsLimit=call sp_FindAllLabelsLimit(?,?);
+sp_FindLabelById=call sp_FindLabelById(?);
+sp_FindLabelByProductId=call sp_FindLabelByProductId(?);
+sp_FindLabelByName=call sp_FindLabelByName(?);
+sp_FindLabelByTitle=call sp_FindLabelByTitle(?);
+sp_InsertNewLabel=call sp_InsertNewLabel(?,?,?,?);
+sp_UpdateLabel=call sp_UpdateLabel(?,?,?,?,?);
+sp_DeleteLabel=call sp_DeleteLabel(?);
 # Product
-# Product - Accessory
-# Product - Discount
-# Product - Label
-# Product - Image
-# Product - Unit
+sp_FindAllProducts=call sp_FindAllProducts();
+sp_FindAccessoryByProductId=call sp_FindAccessoryByProductId(?);
+sp_FindProductById=call sp_FindProductById(?);
+sp_FindProductByBrandId=call sp_FindProductByBrandId(?);
+sp_FindProductByCategoryId=call sp_FindProductByCategoryId(?);
+sp_FindProductByName=call sp_FindProductByName(?);
+sp_FindProductByReleasedYear=call sp_FindProductByReleasedYear(?);
+sp_FindProductByPriceRange=call sp_FindProductByPriceRange(?,?);
+sp_FindProductByLabelId=call sp_FindProductByLabelId(?);
+sp_InsertNewProduct=call sp_InsertNewProduct(?,?,?,?,?,?,?,?,?);
+sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?);
+sp_DeleteProduct=call sp_DeleteProduct(?);
+#  - Accessory
+sp_InsertProductAccessory=call sp_InsertProductAccessory(?,?);
+sp_DeleteProductAccessory=call sp_DeleteProductAccessory(?,?);
+#  - Discount
+sp_InsertProductDiscount=call sp_InsertProductDiscount(?,?);
+sp_DeleteProductDiscount=call sp_DeleteProductDiscount(?,?);
+#  - Label
+sp_InsertProductLabel=call sp_InsertProductLabel(?,?);
+sp_DeleteProductLabel=call sp_DeleteProductLabel(?,?);
+#  - Image
+sp_FindAllProductImages=call sp_FindAllProductImages();
+sp_FindProductImageById=call sp_FindProductImageById(?);
+sp_FindProductImageByProductId=call sp_FindProductImageByProductId(?);
+sp_FindProductImageByImageType=call sp_FindProductImageByImageType(?);
+sp_FindProductImageByProductIdAndImageType=call sp_FindProductImageByProductIdAndImageType(?,?);
+sp_InsertNewProductImage=call sp_InsertNewProductImage(?,?,?,?,?);
+sp_UpdateProductImage=call sp_UpdateProductImage(?,?,?,?,?);
+sp_UpdateProductImagePathAndType=call sp_UpdateProductImagePathAndType(?,?,?);
+sp_DeleteProductImage=call sp_DeleteProductImage(?);
+#  - Unit
+sp_FindAllProductUnits=call sp_FindAllProductUnits();
+sp_FindProductUnitById=call sp_FindProductUnitById(?);
+sp_FindProductUnitByCartId=call sp_FindProductUnitByCartId(?);
+sp_FindProductUnitByInvoiceId=call sp_FindProductUnitByInvoiceId(?);
+sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?);
+sp_UpdateProductUnitProperties=call sp_UpdateProductUnitProperties(?,?,?,?);
+sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?);
+sp_DeleteProductUnit=call sp_DeleteProductUnit(?);
 # RefreshToken
 # Role
+sp_FindAllRoles=call sp_FindAllRoles();
+sp_FindAllRolesLimit=call sp_FindAllRolesLimit(?,?);
+sp_FindRoleById=call sp_FindRoleById(?);
+sp_FindRoleByName=call sp_FindRoleByName(?);
+sp_FindRoleByUserId=call sp_FindRoleByUserId(?);
+sp_FindUserByRoleName=call sp_FindUserByRoleName(?);
+sp_InsertNewRole=call sp_InsertNewRole(?,?);
+sp_UpdateRole=call sp_UpdateRole(?,?,?);
+sp_DeleteRole=call sp_DeleteRole(?);
 # User
-# User - Role
+sp_GetListUser=call sp_GetListUser(?,?,?,?);
+sp_FindAllUsers=call sp_FindAllUsers();
+sp_FindUserById=call sp_FindUserById(?);
+sp_FindUserByPhone=call sp_FindUserByPhone(?);
+sp_FindUserByName=call sp_FindUserByName(?);
+sp_FindUserByGender=call sp_FindUserByGender(?);
+sp_InsertNewUser=call sp_InsertNewUser(?,?,?,?,?,?,?);
+sp_UpdateUser=call sp_UpdateUser(?,?,?,?,?,?,?);
+sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?);
+sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?);
+sp_DeleteUser=call sp_DeleteUser(?);
+#  - Role
+sp_InsertUserRole=call sp_InsertUserRole(?,?);
+sp_DeleteUserRole=call sp_DeleteUserRole(?,?);
