--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -1,171 +1,200 @@
-# Address
-sp_FindAllAddress=call sp_FindAllAddress();
-sp_FindAddressById=call sp_FindAddressById(?);
-sp_FindAddressByUserId=call sp_FindAddressByUserId(?);
-sp_InsertNewAddress=call sp_InsertNewAddress(?,?,?,?,?,?,?);
-sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?);
-sp_DeleteAddress=call sp_DeleteAddress(?);
-# Banner
-sp_FindAllBanners=call sp_FindAllBanners();
-sp_FindAllBannersLimit=call sp_FindAllBannersLimit(?,?);
-sp_FindBannerById=call sp_FindBannerById(?);
-sp_FindBannerByType=call sp_FindBannerByType(?);
-sp_FindBannerByDateRange=call sp_FindBannerByDateRange(?,?);
-sp_FindBannerByDate=call sp_FindBannerByDate(?);
-sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?);
-sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?);
-sp_DeleteBanner=call sp_DeleteBanner(?);
-# Brand
-sp_FindAllBrands=call sp_FindAllBrands();
-sp_FindAllBrandsLimit=call sp_FindAllBrandsLimit(?,?);
-sp_FindBrandById=call sp_FindBrandById(?);
-sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?);
-sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?);
-sp_DeleteBrand=call sp_DeleteBrand(?);
-# Cart
-sp_FindCartByUserId=call sp_FindCartByUserId(?);
-sp_InsertNewCart=call sp_InsertNewCart(?,?,?);
-sp_UpdateCart=call sp_UpdateCart(?,?,?);
-sp_DeleteCart=call sp_DeleteCart(?);
-# Category
-sp_FindAllCategories=call sp_FindAllCategories();
-sp_FindAllCategoriesLimit=call sp_FindAllCategoriesLimit(?,?);
-sp_FindCategoryById=call sp_FindCategoryById(?);
-sp_InsertNewCategory=call sp_InsertNewCategory(?,?,?);
-sp_UpdateCategory=call sp_UpdateCategory(?,?,?,?);
-sp_DeleteCategory=call sp_DeleteCategory(?);
-# Comment
-sp_FindAllComments=call sp_FindAllComments();
-sp_FindAllCommentsLimit=call sp_FindAllCommentsLimit(?,?);
-sp_FindCommentById=call sp_FindCommentById(?);
-sp_FindCommentByProductId=call sp_FindCommentByProductId(?);
-sp_FindCommentByUserPhone=call sp_FindCommentByUserPhone(?);
-sp_InsertNewComment=call sp_InsertNewComment(?,?,?,?,?);
-sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?);
-sp_DeleteComment=call sp_DeleteComment(?);
-# Discount
-sp_FindAllDiscounts=call sp_FindAllDiscounts();
-sp_FindAllDiscountsLimit=call sp_FindAllDiscountsLimit(?,?);
-sp_FindDiscountById=call sp_FindDiscountById(?);
-sp_FindDiscountByProductId=call sp_FindDiscountByProductId(?);
-sp_FindDiscountByType=call sp_FindDiscountByType(?);
-sp_FindDiscountByCode=call sp_FindDiscountByCode(?);
-sp_FindDiscountByDateRange=call sp_FindDiscountByDateRange(?,?);
-sp_FindDiscountOfProductUseInDate=call sp_FindDiscountOfProductUseInDate(?,?);
-sp_InsertNewDiscount=call sp_InsertNewDiscount(?,?,?,?,?,?);
-sp_UpdateDiscount=call sp_UpdateDiscount(?,?,?,?,?,?,?);
-sp_DeleteDiscount=call sp_DeleteDiscount(?);
-# Feedback
-sp_FindAllFeedbacks=call sp_FindAllFeedbacks();
-sp_FindAllFeedbacksLimit=call sp_FindAllFeedbacksLimit(?,?);
-sp_FindFeedbackById=call sp_FindFeedbackById(?);
-sp_FindFeedbackByProductId=call sp_FindFeedbackByProductId(?);
-sp_FindFeedbackByUserId=call sp_FindFeedbackByUserId(?);
-sp_FindFeedbackByRatingPoint=call sp_FindFeedbackByRatingPoint(?);
-sp_FindFeedbackByProductIdAndRatingPoint=call sp_FindFeedbackByProductIdAndRatingPoint(?,?);
-sp_InsertNewFeedback=call sp_InsertNewFeedback(?,?,?,?);
-sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?);
-sp_DeleteFeedback=call sp_DeleteFeedback(?,?,?);
-# Import
-sp_FindAllImports=call sp_FindAllImports();
-sp_FindAllImportsLimit=call sp_FindAllImportsLimit(?,?);
-sp_FindImportById=call sp_FindImportById(?);
-sp_FindImportByProductId=call sp_FindImportByProductId(?);
-sp_FindImportProductByDate=call sp_FindImportProductByDate(?);
-sp_FindImportProductByDateRange=call sp_FindImportProductByDateRange(?,?);
-sp_InsertNewImport=call sp_InsertNewImport(?,?,?,?,?);
-sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?);
-sp_DeleteImport=call sp_DeleteImport(?);
-# Invoice
-sp_FindAllInvoices=call sp_FindAllInvoices();
-sp_FindAllInvoicesLimit=call sp_FindAllInvoicesLimit(?,?);
-sp_FindInvoiceById=call sp_FindInvoiceById(?);
-sp_FindInvoiceByUserId=call sp_FindInvoiceByUserId(?);
-sp_FindInvoiceByPaymentType=call sp_FindInvoiceByPaymentType(?);
-sp_FindInvoiceByOrderStatus=call sp_FindInvoiceByOrderStatus(?);
-sp_FindInvoiceByPaidStatus=call sp_FindInvoiceByPaidStatus(?);
-sp_FindInvoiceByAddress=call sp_FindInvoiceByAddress(?);
-sp_FindInvoiceByDate=call sp_FindInvoiceByDate(?);
-sp_FindInvoiceByDateRange=call sp_FindInvoiceByDateRange(?,?);
-sp_InsertNewInvoice=call sp_InsertNewInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?);
-sp_UpdateInvoiceStatus=call sp_UpdateInvoiceStatus(?,?);
-sp_UpdateInvoicePaymentMethodAndPaidStatus=call sp_UpdateInvoicePaymentMethodAndPaidStatus(?,?,?);
-sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?);
-sp_DeleteInvoice=call sp_DeleteInvoice(?);
-# Label
-sp_FindAllLabels=call sp_FindAllLabels();
-sp_FindAllLabelsLimit=call sp_FindAllLabelsLimit(?,?);
-sp_FindLabelById=call sp_FindLabelById(?);
-sp_FindLabelByProductId=call sp_FindLabelByProductId(?);
-sp_FindLabelByName=call sp_FindLabelByName(?);
-sp_FindLabelByTitle=call sp_FindLabelByTitle(?);
-sp_InsertNewLabel=call sp_InsertNewLabel(?,?,?,?);
-sp_UpdateLabel=call sp_UpdateLabel(?,?,?,?,?);
-sp_DeleteLabel=call sp_DeleteLabel(?);
-# Product
-sp_FindAllProducts=call sp_FindAllProducts();
-sp_FindAccessoryByProductId=call sp_FindAccessoryByProductId(?);
-sp_FindProductById=call sp_FindProductById(?);
-sp_FindProductByBrandId=call sp_FindProductByBrandId(?);
-sp_FindProductByCategoryId=call sp_FindProductByCategoryId(?);
-sp_FindProductByName=call sp_FindProductByName(?);
-sp_FindProductByReleasedYear=call sp_FindProductByReleasedYear(?);
-sp_FindProductByPriceRange=call sp_FindProductByPriceRange(?,?);
-sp_FindProductByLabelId=call sp_FindProductByLabelId(?);
-sp_InsertNewProduct=call sp_InsertNewProduct(?,?,?,?,?,?,?,?,?);
-sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?);
-sp_DeleteProduct=call sp_DeleteProduct(?);
-#  - Accessory
+#ProductAccessory
 sp_InsertProductAccessory=call sp_InsertProductAccessory(?,?);
 sp_DeleteProductAccessory=call sp_DeleteProductAccessory(?,?);
-#  - Discount
+#ProductDiscount
 sp_InsertProductDiscount=call sp_InsertProductDiscount(?,?);
 sp_DeleteProductDiscount=call sp_DeleteProductDiscount(?,?);
-#  - Label
+#ProductLabel
 sp_InsertProductLabel=call sp_InsertProductLabel(?,?);
 sp_DeleteProductLabel=call sp_DeleteProductLabel(?,?);
-#  - Image
-sp_FindAllProductImages=call sp_FindAllProductImages();
+#ProductImage
+sp_InsertNewProductImage=call sp_InsertNewProductImage(?,?,?,?,?,?);
+sp_UpdateProductImage=call sp_UpdateProductImage(?,?,?,?,?,?,?);
+sp_UpdateProductImageUrlAndType=call sp_UpdateProductImageUrlAndType(?,?,?,?);
+sp_DeleteProductImage=call sp_DeleteProductImage(?,?);
+sp_FindAllProductImages=call sp_FindAllProductImages(?,?,?,?);
+sp_FindProductImageByFilter=call sp_FindProductImageByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductImageById=call sp_FindProductImageById(?);
 sp_FindProductImageByProductId=call sp_FindProductImageByProductId(?);
 sp_FindProductImageByImageType=call sp_FindProductImageByImageType(?);
-sp_FindProductImageByProductIdAndImageType=call sp_FindProductImageByProductIdAndImageType(?,?);
-sp_InsertNewProductImage=call sp_InsertNewProductImage(?,?,?,?,?);
-sp_UpdateProductImage=call sp_UpdateProductImage(?,?,?,?,?);
-sp_UpdateProductImagePathAndType=call sp_UpdateProductImagePathAndType(?,?,?);
-sp_DeleteProductImage=call sp_DeleteProductImage(?);
-#  - Unit
-sp_FindAllProductUnits=call sp_FindAllProductUnits();
+sp_CountAllProductImage=call sp_CountAllProductImage();
+sp_CountProductImageWithCondition=call sp_CountProductImageWithCondition(?,?,?,?,?,?,?,?,?);
+#ProductUnit
+sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?,?,?);
+sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?,?,?);
+sp_DeleteProductUnit=call sp_DeleteProductUnit(?,?);
+sp_FindAllProductUnits=call sp_FindAllProductUnits(?,?,?,?);
+sp_FindProductUnitByFilter=call sp_FindProductUnitByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductUnitById=call sp_FindProductUnitById(?);
 sp_FindProductUnitByCartId=call sp_FindProductUnitByCartId(?);
 sp_FindProductUnitByInvoiceId=call sp_FindProductUnitByInvoiceId(?);
-sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?);
-sp_UpdateProductUnitProperties=call sp_UpdateProductUnitProperties(?,?,?,?);
-sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?);
-sp_DeleteProductUnit=call sp_DeleteProductUnit(?);
-# RefreshToken
-# Role
-sp_FindAllRoles=call sp_FindAllRoles();
-sp_FindAllRolesLimit=call sp_FindAllRolesLimit(?,?);
+sp_CountAllProductUnit=call sp_CountAllProductUnit();
+sp_CountProductUnitWithCondition=call sp_CountProductUnitWithCondition(?,?,?,?,?,?,?,?,?,?,?);
+#Address
+sp_InsertNewAddress=call sp_InsertNewAddress(?,?,?,?,?,?,?,?,?);
+sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?,?,?);
+sp_DeleteAddress=call sp_DeleteAddress(?,?);
+sp_FindAllAddress=call sp_FindAllAddress(?,?,?,?);
+sp_FindAddressById=call sp_FindAddressById(?);
+sp_FindAddressByUserId=call sp_FindAddressByUserId(?);
+sp_CountAllAddress=call sp_CountAllAddress();
+sp_CountAddressWithCondition=call sp_CountAddressWithCondition(?,?,?,?,?,?,?,?,?,?,?,?);
+#Banner
+sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?,?);
+sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?,?);
+sp_DeleteBanner=call sp_DeleteBanner(?,?);
+sp_FindAllBanners=call sp_FindAllBanners(?,?,?,?);
+sp_FindBannerByFilter=call sp_FindBannerByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindBannerById=call sp_FindBannerById(?);
+sp_FindBannerByDateRange=call sp_FindBannerByDateRange(?,?);
+sp_FindBannerByDate=call sp_FindBannerByDate(?)
+sp_CountAllBanner=call sp_CountAllBanner();
+sp_CountBannerWithCondition=call sp_CountBannerWithCondition(?,?,?,?,?,?,?,?,?,?,?);
+#Brand
+sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?,?);
+sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?,?);
+sp_DeleteBrand=call sp_DeleteBrand(?,?);
+sp_FindAllBrands=call sp_FindAllBrands(?,?,?,?);
+sp_FindBrandByFilter=call sp_FindBrandByFilter(?,?,?,?,?,?,?,?,?,?,?);
+sp_FindBrandById=call sp_FindBrandById(?);
+sp_CountAllBrand=call sp_CountAllBrand();
+sp_CountBrandWithCondition=call sp_CountBrandWithCondition(?,?,?,?,?,?,?,?,?);
+#Cart
+sp_InsertNewCart=call sp_InsertNewCart(?,?,?,?);
+sp_UpdateCart=call sp_UpdateCart(?,?,?,?,?);
+sp_DeleteCart=call sp_DeleteCart(?,?);
+sp_FindCartByUserId=call sp_FindCartByUserId(?);
+#Categor
+sp_InsertNewCategory=call sp_InsertNewCategory(?,?,?,?);
+sp_UpdateCategory=call sp_UpdateCategory(?,?,?,?,?);
+sp_DeleteCategory=call sp_DeleteCategory(?,?);
+sp_FindAllCategories=call sp_FindAllCategories(?,?,?,?);
+sp_FindCategoryByFilter=call sp_FindCategoryByFilter(?,?,?,?,?,?,?,?,?,?);
+sp_FindCategoryById=call sp_FindCategoryById(?);
+sp_CountAllCategory=call sp_CountAllCategory();
+sp_CountCategoryWithCondition=call sp_CountCategoryWithCondition(?,?,?,?,?,?,?,?);
+#Comment
+sp_InsertNewComment=call sp_InsertNewComment(?,?,?,?,?,?,?);
+sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?,?,?);
+sp_DeleteComment=call sp_DeleteComment(?,?);
+sp_FindAllComments=call sp_FindAllComments(?,?,?,?);
+sp_FindCommentByFilter=call sp_FindCommentByFilter(?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindCommentById=call sp_FindCommentById(?);
+sp_FindCommentByRootCommentId=call sp_FindCommentByRootCommentId(?);
+sp_FindCommentByProductId=call sp_FindCommentByProductId(?);
+sp_CountAllComment=call sp_CountAllComment();
+sp_CountCommentWithCondition=call sp_CountCommentWithCondition(?,?,?,?,?,?,?,?,?,?);
+#Feedback
+sp_InsertNewFeedback=call sp_InsertNewFeedback(?,?,?,?,?,?);
+sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?,?,?);
+sp_DeleteFeedback=call sp_DeleteFeedback(?,?);
+sp_FindAllFeedbacks=call sp_FindAllFeedbacks(?,?,?,?);
+sp_FindFeedbackByFilter=call sp_FindFeedbackByFilter(?,?,?,?,?,?,?,?,?,?,?);
+sp_FindFeedbackById=call sp_FindFeedbackById(?);
+sp_FindFeedbackByProductId=call sp_FindFeedbackByProductId(?);
+sp_FindFeedbackByUserId=call sp_FindFeedbackByUserId(?);
+sp_CountAllFeedback=call sp_CountAllFeedback();
+sp_CountFeedbackWithCondition=call sp_CountFeedbackWithCondition(?,?,?,?,?,?,?,?,?);
+#Import
+sp_InsertNewImport=call sp_InsertNewImport(?,?,?,?,?,?);
+sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?,?,?);
+sp_DeleteImport=call sp_DeleteImport(?,?);
+sp_FindAllImports=call sp_FindAllImports(?,?,?,?);
+sp_FindImportByFilter=call sp_FindImportByFilter(?,?,?,?,?,?,?,?,?,?,?);
+sp_FindImportById=call sp_FindImportById(?);
+sp_FindImportByProductId=call sp_FindImportByProductId(?);
+sp_FindImportByDate=call sp_FindImportByDate(?);
+sp_FindImportByDateRange=call sp_FindImportByDateRange(?,?);
+sp_CountAllImport=call sp_CountAllImport();
+sp_CountImportWithCondition=call sp_CountImportWithCondition(?,?,?,?,?,?,?,?,?);
+#Invoice
+sp_InsertNewInvoice=call sp_InsertNewInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateInvoiceOrderStatus=call sp_UpdateInvoiceOrderStatus(?,?,?);
+sp_UpdateInvoicePaymentTypeAndPaidStatus=call sp_UpdateInvoicePaymentTypeAndPaidStatus(?,?,?,?);
+sp_DeleteInvoice=call sp_DeleteInvoice(?,?);
+sp_FindAllInvoices=call sp_FindAllInvoices(?,?,?,?);
+sp_FindInvoiceByFilter=call sp_FindInvoiceByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindInvoiceById=call sp_FindInvoiceById(?);
+sp_FindInvoiceByUserId=call sp_FindInvoiceByUserId(?);
+sp_FindInvoiceByOrderStatus=call sp_FindInvoiceByOrderStatus(?);
+sp_FindInvoiceByDate=call sp_FindInvoiceByDate(?);
+sp_FindInvoiceByDateRange=call sp_FindInvoiceByDateRange(?,?);
+sp_CountAllInvoice=call sp_CountAllInvoice();
+sp_CountInvoiceWithCondition=call sp_CountInvoiceWithCondition(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+#Discount
+sp_InsertNewDiscount=call sp_InsertNewDiscount(?,?,?,?,?,?,?);
+sp_UpdateDiscount=call sp_UpdateDiscount(?,?,?,?,?,?,?,?);
+sp_DeleteDiscount=call sp_DeleteDiscount(?,?);
+sp_FindAllDiscounts=call sp_FindAllDiscounts(?,?,?,?);
+sp_FindDiscountByFilter=call sp_FindDiscountByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindDiscountById=call sp_FindDiscountById(?);
+sp_CountAllDiscount=call sp_CountAllDiscount();
+sp_CountDiscountWithCondition=call sp_CountDiscountWithCondition(?,?,?,?,?,?,?,?,?,?,?);
+sp_FindDiscountByProductId=call sp_FindDiscountByProductId(?);
+sp_FindDiscountOfProductUseInDate=call sp_FindDiscountOfProductUseInDate(?,?);
+sp_FindDiscountByDateRange=call sp_FindDiscountByDateRange(?,?);
+#Label
+sp_InsertNewLabel=call sp_InsertNewLabel(?,?,?,?,?);
+sp_UpdateLabel=call sp_UpdateLabel(?,?,?,?,?,?);
+sp_DeleteLabel=call sp_DeleteLabel(?,?);
+sp_FindAllLabels=call sp_FindAllLabels(?,?,?,?);
+sp_FindLabelByFilter=call sp_FindLabelByFilter(?,?,?,?,?,?,?,?,?,?,?);
+sp_FindLabelById=call sp_FindLabelById(?);
+sp_CountAllLabel=call sp_CountAllLabel();
+sp_CountLabelWithCondition=call sp_CountLabelWithCondition(?,?,?,?,?,?,?,?,?);
+sp_FindLabelByProductId=call sp_FindLabelByProductId(?);
+sp_FindProductByLabelId=call sp_FindProductByLabelId(?);
+#Product
+sp_InsertNewProduct=call sp_InsertNewProduct(?,?,?,?,?,?,?,?,?,?);
+sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateProductPrice=call sp_UpdateProductPrice(?,?,?);
+sp_DeleteProduct=call sp_DeleteProduct(?,?);
+sp_FindAllProducts=call sp_FindAllProducts(?,?,?,?);
+sp_FindProductByFilter=call sp_FindProductByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindProductById=call sp_FindProductById(?);
+sp_FindProductByBrandId=call sp_FindProductByBrandId(?);
+sp_FindProductByCategoryId=call sp_FindProductByCategoryId(?);
+sp_CountAllProduct=call sp_CountAllProduct();
+sp_CountProductWithCondition=call sp_CountProductWithCondition(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindAccessoryByProductId=call sp_FindAccessoryByProductId(?);
+sp_FindProductByReleasedYear=call sp_FindProductByReleasedYear(?);
+sp_FindProductByPriceRange=call sp_FindProductByPriceRange(?,?);
+#UserRole
+sp_InsertUserRole=call sp_InsertUserRole(?,?);
+sp_DeleteUserRole=call sp_DeleteUserRole(?,?);
+#RefreshToken
+sp_InsertRefreshToken=call sp_InsertRefreshToken(?,?,?,?);
+sp_FindRefreshTokenByCode=call sp_FindRefreshTokenByCode(?);
+sp_CountAllRefreshToken=call sp_CountAllRefreshToken();
+sp_CountRefreshTokenInDate=call sp_CountRefreshTokenInDate(?);
+#Role
+sp_InsertNewRole=call sp_InsertNewRole(?,?,?);
+sp_UpdateRole=call sp_UpdateRole(?,?,?,?);
+sp_DeleteRole=call sp_DeleteRole(?,?);
+sp_FindAllRoles=call sp_FindAllRoles(?,?,?,?);
+sp_FindRoleByFilter=call sp_FindRoleByFilter(?,?,?,?,?,?,?,?,?);
 sp_FindRoleById=call sp_FindRoleById(?);
 sp_FindRoleByName=call sp_FindRoleByName(?);
 sp_FindRoleByUserId=call sp_FindRoleByUserId(?);
-sp_InsertNewRole=call sp_InsertNewRole(?,?);
-sp_UpdateRole=call sp_UpdateRole(?,?,?);
-sp_DeleteRole=call sp_DeleteRole(?);
-# User
-sp_GetListUser=call sp_GetListUser(?,?,?,?);
-sp_FindAllUsers=call sp_FindAllUsers();
+sp_CountAllRole=call sp_CountAllRole();
+sp_CountRoleWithCondition=call sp_CountRoleWithCondition(?,?,?,?,?,?,?);
+#User
+sp_InsertNewUser=call sp_InsertNewUser(?,?,?,?,?,?,?,?);
+sp_UpdateUser=call sp_UpdateUser(?,?,?,?,?,?,?,?,?);
+sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?,?);
+sp_UpdateUserPassword=call sp_UpdateUserPassword(?,?,?);
+sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?,?);
+sp_DeleteUser=call sp_DeleteUser(?,?);
+sp_FindAllUsers=call sp_FindAllUsers(?,?,?,?);
+sp_FindUserByFilter=call sp_FindUserByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindUserById=call sp_FindUserById(?);
-sp_FindUserByRoleName=call sp_FindUserByRoleName(?);
 sp_FindUserByPhone=call sp_FindUserByPhone(?);
-sp_FindUserByName=call sp_FindUserByName(?);
-sp_FindUserByGender=call sp_FindUserByGender(?);
-sp_InsertNewUser=call sp_InsertNewUser(?,?,?,?,?,?,?);
-sp_UpdateUser=call sp_UpdateUser(?,?,?,?,?,?,?);
-sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?);
-sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?);
-sp_DeleteUser=call sp_DeleteUser(?);
-#  - Role
-sp_InsertUserRole=call sp_InsertUserRole(?,?);
-sp_DeleteUserRole=call sp_DeleteUserRole(?,?);
+sp_FindUserByRoleName=call sp_FindUserByRoleName(?);
+sp_CountAllUser=call sp_CountAllUser();
+sp_CountUserWithCondition=call sp_CountUserWithCondition(?,?,?,?,?,?,?,?,?,?,?);
+#LogSystem
+sp_FindAllLogSystems=call sp_FindAllLogSystems(?,?,?,?);
+sp_FindLogSystemByFilter=call sp_FindLogSystemByFilter(?,?,?,?,?,?);
+sp_CountAllLogSystem=call sp_CountAllLogSystem();
+sp_CountLogSystemWithCondition=call sp_CountLogSystemWithCondition(?,?,?,?);
