[DAO + Filter - MAIN] Upgrade some function for proc

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -34,6 +34,7 @@ sp_CountProductUnitWithCondition=call sp_CountProductUnitWithCondition(?,?,?,?,?
 sp_InsertNewAddress=call sp_InsertNewAddress(?,?,?,?,?,?,?,?,?);
 sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?,?,?);
 sp_DeleteAddress=call sp_DeleteAddress(?,?);
+sp_CheckExistAddress=call sp_CheckExistAddress(?,?,?,?,?,?);
 sp_FindAllAddress=call sp_FindAllAddress(?,?,?,?);
 sp_FindAddressById=call sp_FindAddressById(?);
 sp_FindAddressByUserId=call sp_FindAddressByUserId(?);
@@ -43,6 +44,7 @@ sp_CountAddressWithCondition=call sp_CountAddressWithCondition(?,?,?,?,?,?,?,?,?
 sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?,?);
 sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?,?);
 sp_DeleteBanner=call sp_DeleteBanner(?,?);
+sp_CheckExistBanner=call sp_CheckExistBanner(?,?,?,?);
 sp_FindAllBanners=call sp_FindAllBanners(?,?,?,?);
 sp_FindBannerByFilter=call sp_FindBannerByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindBannerById=call sp_FindBannerById(?);
@@ -54,6 +56,7 @@ sp_CountBannerWithCondition=call sp_CountBannerWithCondition(?,?,?,?,?,?,?,?,?,?
 sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?,?);
 sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?,?);
 sp_DeleteBrand=call sp_DeleteBrand(?,?);
+sp_CheckExistBrand=call sp_CheckExistBrand(?,?,?);
 sp_FindAllBrands=call sp_FindAllBrands(?,?,?,?);
 sp_FindBrandByFilter=call sp_FindBrandByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindBrandById=call sp_FindBrandById(?);
@@ -63,11 +66,13 @@ sp_CountBrandWithCondition=call sp_CountBrandWithCondition(?,?,?,?,?,?,?,?,?);
 sp_InsertNewCart=call sp_InsertNewCart(?,?,?,?);
 sp_UpdateCart=call sp_UpdateCart(?,?,?,?,?);
 sp_DeleteCart=call sp_DeleteCart(?,?);
+sp_CheckExistCart=call sp_CheckExistCart(?,?);
 sp_FindCartByUserId=call sp_FindCartByUserId(?);
 #Categor
 sp_InsertNewCategory=call sp_InsertNewCategory(?,?,?,?);
 sp_UpdateCategory=call sp_UpdateCategory(?,?,?,?,?);
 sp_DeleteCategory=call sp_DeleteCategory(?,?);
+sp_CheckExistCategory=call sp_CheckExistCategory(?,?,?);
 sp_FindAllCategories=call sp_FindAllCategories(?,?,?,?);
 sp_FindCategoryByFilter=call sp_FindCategoryByFilter(?,?,?,?,?,?,?,?,?,?);
 sp_FindCategoryById=call sp_FindCategoryById(?);
@@ -77,6 +82,7 @@ sp_CountCategoryWithCondition=call sp_CountCategoryWithCondition(?,?,?,?,?,?,?,?
 sp_InsertNewComment=call sp_InsertNewComment(?,?,?,?,?,?,?);
 sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?,?,?);
 sp_DeleteComment=call sp_DeleteComment(?,?);
+sp_CheckExistComment=call sp_CheckExistComment(?,?,?,?);
 sp_FindAllComments=call sp_FindAllComments(?,?,?,?);
 sp_FindCommentByFilter=call sp_FindCommentByFilter(?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindCommentById=call sp_FindCommentById(?);
@@ -88,6 +94,7 @@ sp_CountCommentWithCondition=call sp_CountCommentWithCondition(?,?,?,?,?,?,?,?,?
 sp_InsertNewFeedback=call sp_InsertNewFeedback(?,?,?,?,?,?);
 sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?,?,?);
 sp_DeleteFeedback=call sp_DeleteFeedback(?,?);
+sp_CheckExistFeedback=call sp_CheckExistFeedback(?,?,?,?,?);
 sp_FindAllFeedbacks=call sp_FindAllFeedbacks(?,?,?,?);
 sp_FindFeedbackByFilter=call sp_FindFeedbackByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindFeedbackById=call sp_FindFeedbackById(?);
@@ -99,6 +106,7 @@ sp_CountFeedbackWithCondition=call sp_CountFeedbackWithCondition(?,?,?,?,?,?,?,?
 sp_InsertNewImport=call sp_InsertNewImport(?,?,?,?,?,?);
 sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?,?,?);
 sp_DeleteImport=call sp_DeleteImport(?,?);
+sp_CheckExistImport=call sp_CheckExistImport(?,?,?,?,?);
 sp_FindAllImports=call sp_FindAllImports(?,?,?,?);
 sp_FindImportByFilter=call sp_FindImportByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindImportById=call sp_FindImportById(?);
@@ -113,6 +121,7 @@ sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_UpdateInvoiceOrderStatus=call sp_UpdateInvoiceOrderStatus(?,?,?);
 sp_UpdateInvoicePaymentTypeAndPaidStatus=call sp_UpdateInvoicePaymentTypeAndPaidStatus(?,?,?,?);
 sp_DeleteInvoice=call sp_DeleteInvoice(?,?);
+sp_CheckExistInvoice=call sp_CheckExistInvoice(?,?,?,?,?,?);
 sp_FindAllInvoices=call sp_FindAllInvoices(?,?,?,?);
 sp_FindInvoiceByFilter=call sp_FindInvoiceByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindInvoiceById=call sp_FindInvoiceById(?);
@@ -126,6 +135,7 @@ sp_CountInvoiceWithCondition=call sp_CountInvoiceWithCondition(?,?,?,?,?,?,?,?,?
 sp_InsertNewDiscount=call sp_InsertNewDiscount(?,?,?,?,?,?,?);
 sp_UpdateDiscount=call sp_UpdateDiscount(?,?,?,?,?,?,?,?);
 sp_DeleteDiscount=call sp_DeleteDiscount(?,?);
+sp_CheckExistDiscount=call sp_CheckExistDiscount(?,?,?,?,?,?);
 sp_FindAllDiscounts=call sp_FindAllDiscounts(?,?,?,?);
 sp_FindDiscountByFilter=call sp_FindDiscountByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindDiscountById=call sp_FindDiscountById(?);
@@ -138,6 +148,7 @@ sp_FindDiscountByDateRange=call sp_FindDiscountByDateRange(?,?);
 sp_InsertNewLabel=call sp_InsertNewLabel(?,?,?,?,?);
 sp_UpdateLabel=call sp_UpdateLabel(?,?,?,?,?,?);
 sp_DeleteLabel=call sp_DeleteLabel(?,?);
+sp_CheckExistLabel=call sp_CheckExistLabel(?,?,?,?,?,?);
 sp_FindAllLabels=call sp_FindAllLabels(?,?,?,?);
 sp_FindLabelByFilter=call sp_FindLabelByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindLabelById=call sp_FindLabelById(?);
@@ -150,6 +161,7 @@ sp_InsertNewProduct=call sp_InsertNewProduct(?,?,?,?,?,?,?,?,?,?);
 sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?,?,?);
 sp_UpdateProductPrice=call sp_UpdateProductPrice(?,?,?);
 sp_DeleteProduct=call sp_DeleteProduct(?,?);
+sp_CheckExistProduct=call sp_CheckExistProduct(?,?,?,?,?,?);
 sp_FindAllProducts=call sp_FindAllProducts(?,?,?,?);
 sp_FindProductByFilter=call sp_FindProductByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductById=call sp_FindProductById(?);
@@ -172,6 +184,7 @@ sp_CountRefreshTokenInDate=call sp_CountRefreshTokenInDate(?);
 sp_InsertNewRole=call sp_InsertNewRole(?,?,?);
 sp_UpdateRole=call sp_UpdateRole(?,?,?,?);
 sp_DeleteRole=call sp_DeleteRole(?,?);
+sp_CheckExistRole=call sp_CheckExistRole(?,?,?,?,?,?);
 sp_FindAllRoles=call sp_FindAllRoles(?,?,?,?);
 sp_FindRoleByFilter=call sp_FindRoleByFilter(?,?,?,?,?,?,?,?,?);
 sp_FindRoleById=call sp_FindRoleById(?);
@@ -186,6 +199,7 @@ sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?,?);
 sp_UpdateUserPassword=call sp_UpdateUserPassword(?,?,?);
 sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?,?);
 sp_DeleteUser=call sp_DeleteUser(?,?);
+sp_CheckExistUser=call sp_CheckExistUser(?,?,?,?,?,?);
 sp_FindAllUsers=call sp_FindAllUsers(?,?,?,?);
 sp_FindUserByFilter=call sp_FindUserByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindUserById=call sp_FindUserById(?);
