[DAO + Filter - MAIN] Upgrade multiple function for proc (2)

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -32,7 +32,7 @@ sp_CountAllProductUnit=call sp_CountAllProductUnit();
 sp_CountProductUnitWithCondition=call sp_CountProductUnitWithCondition(?,?,?,?,?,?,?,?,?,?,?);
 #Address
 sp_InsertNewAddress=call sp_InsertNewAddress(?,?,?,?,?,?,?,?,?);
-sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?,?,?);
+sp_UpdateAddress=call sp_UpdateAddress(?,?,?,?,?,?,?,?,?);
 sp_DeleteAddress=call sp_DeleteAddress(?,?);
 sp_CheckExistAddress=call sp_CheckExistAddress(?,?,?,?,?,?);
 sp_FindAllAddress=call sp_FindAllAddress(?,?,?,?);
@@ -44,7 +44,7 @@ sp_CountAddressWithCondition=call sp_CountAddressWithCondition(?,?,?,?,?,?,?,?,?
 sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?,?);
 sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?,?);
 sp_DeleteBanner=call sp_DeleteBanner(?,?);
-sp_CheckExistBanner=call sp_CheckExistBanner(?,?,?,?);
+sp_CheckExistBanner=call sp_CheckExistBanner(?,?,?,?,?,?);
 sp_FindAllBanners=call sp_FindAllBanners(?,?,?,?);
 sp_FindBannerByFilter=call sp_FindBannerByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindBannerById=call sp_FindBannerById(?);
@@ -56,7 +56,7 @@ sp_CountBannerWithCondition=call sp_CountBannerWithCondition(?,?,?,?,?,?,?,?,?,?
 sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?,?);
 sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?,?);
 sp_DeleteBrand=call sp_DeleteBrand(?,?);
-sp_CheckExistBrand=call sp_CheckExistBrand(?,?,?);
+sp_CheckExistBrand=call sp_CheckExistBrand(?,?,?,?);
 sp_FindAllBrands=call sp_FindAllBrands(?,?,?,?);
 sp_FindBrandByFilter=call sp_FindBrandByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindBrandById=call sp_FindBrandById(?);
@@ -64,7 +64,7 @@ sp_CountAllBrand=call sp_CountAllBrand();
 sp_CountBrandWithCondition=call sp_CountBrandWithCondition(?,?,?,?,?,?,?,?,?);
 #Cart
 sp_InsertNewCart=call sp_InsertNewCart(?,?,?,?);
-sp_UpdateCart=call sp_UpdateCart(?,?,?,?,?);
+sp_UpdateCart=call sp_UpdateCart(?,?,?,?);
 sp_DeleteCart=call sp_DeleteCart(?,?);
 sp_CheckExistCart=call sp_CheckExistCart(?,?);
 sp_FindCartByUserId=call sp_FindCartByUserId(?);
@@ -80,9 +80,9 @@ sp_CountAllCategory=call sp_CountAllCategory();
 sp_CountCategoryWithCondition=call sp_CountCategoryWithCondition(?,?,?,?,?,?,?,?);
 #Comment
 sp_InsertNewComment=call sp_InsertNewComment(?,?,?,?,?,?,?);
-sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?,?,?);
+sp_UpdateComment=call sp_UpdateComment(?,?,?,?,?,?,?);
 sp_DeleteComment=call sp_DeleteComment(?,?);
-sp_CheckExistComment=call sp_CheckExistComment(?,?,?,?);
+sp_CheckExistComment=call sp_CheckExistComment(?,?,?,?,?);
 sp_FindAllComments=call sp_FindAllComments(?,?,?,?);
 sp_FindCommentByFilter=call sp_FindCommentByFilter(?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindCommentById=call sp_FindCommentById(?);
@@ -92,9 +92,9 @@ sp_CountAllComment=call sp_CountAllComment();
 sp_CountCommentWithCondition=call sp_CountCommentWithCondition(?,?,?,?,?,?,?,?,?,?);
 #Feedback
 sp_InsertNewFeedback=call sp_InsertNewFeedback(?,?,?,?,?,?);
-sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?,?,?);
+sp_UpdateFeedback=call sp_UpdateFeedback(?,?,?,?,?,?);
 sp_DeleteFeedback=call sp_DeleteFeedback(?,?);
-sp_CheckExistFeedback=call sp_CheckExistFeedback(?,?,?,?,?);
+sp_CheckExistFeedback=call sp_CheckExistFeedback(?,?,?,?);
 sp_FindAllFeedbacks=call sp_FindAllFeedbacks(?,?,?,?);
 sp_FindFeedbackByFilter=call sp_FindFeedbackByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindFeedbackById=call sp_FindFeedbackById(?);
@@ -104,9 +104,9 @@ sp_CountAllFeedback=call sp_CountAllFeedback();
 sp_CountFeedbackWithCondition=call sp_CountFeedbackWithCondition(?,?,?,?,?,?,?,?,?);
 #Import
 sp_InsertNewImport=call sp_InsertNewImport(?,?,?,?,?,?);
-sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?,?,?);
+sp_UpdateImport=call sp_UpdateImport(?,?,?,?,?,?);
 sp_DeleteImport=call sp_DeleteImport(?,?);
-sp_CheckExistImport=call sp_CheckExistImport(?,?,?,?,?);
+sp_CheckExistImport=call sp_CheckExistImport(?,?,?,?);
 sp_FindAllImports=call sp_FindAllImports(?,?,?,?);
 sp_FindImportByFilter=call sp_FindImportByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindImportById=call sp_FindImportById(?);
@@ -117,7 +117,7 @@ sp_CountAllImport=call sp_CountAllImport();
 sp_CountImportWithCondition=call sp_CountImportWithCondition(?,?,?,?,?,?,?,?,?);
 #Invoice
 sp_InsertNewInvoice=call sp_InsertNewInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?);
-sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_UpdateInvoiceOrderStatus=call sp_UpdateInvoiceOrderStatus(?,?,?);
 sp_UpdateInvoicePaymentTypeAndPaidStatus=call sp_UpdateInvoicePaymentTypeAndPaidStatus(?,?,?,?);
 sp_DeleteInvoice=call sp_DeleteInvoice(?,?);
@@ -139,26 +139,25 @@ sp_CheckExistDiscount=call sp_CheckExistDiscount(?,?,?,?,?,?);
 sp_FindAllDiscounts=call sp_FindAllDiscounts(?,?,?,?);
 sp_FindDiscountByFilter=call sp_FindDiscountByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindDiscountById=call sp_FindDiscountById(?);
-sp_CountAllDiscount=call sp_CountAllDiscount();
-sp_CountDiscountWithCondition=call sp_CountDiscountWithCondition(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindDiscountByProductId=call sp_FindDiscountByProductId(?);
 sp_FindDiscountOfProductUseInDate=call sp_FindDiscountOfProductUseInDate(?,?);
 sp_FindDiscountByDateRange=call sp_FindDiscountByDateRange(?,?);
+sp_CountAllDiscount=call sp_CountAllDiscount();
+sp_CountDiscountWithCondition=call sp_CountDiscountWithCondition(?,?,?,?,?,?,?,?,?,?,?);
 #Label
 sp_InsertNewLabel=call sp_InsertNewLabel(?,?,?,?,?);
 sp_UpdateLabel=call sp_UpdateLabel(?,?,?,?,?,?);
 sp_DeleteLabel=call sp_DeleteLabel(?,?);
-sp_CheckExistLabel=call sp_CheckExistLabel(?,?,?,?,?,?);
+sp_CheckExistLabel=call sp_CheckExistLabel(?,?,?,?);
 sp_FindAllLabels=call sp_FindAllLabels(?,?,?,?);
 sp_FindLabelByFilter=call sp_FindLabelByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindLabelById=call sp_FindLabelById(?);
+sp_FindLabelByProductId=call sp_FindLabelByProductId(?);
 sp_CountAllLabel=call sp_CountAllLabel();
 sp_CountLabelWithCondition=call sp_CountLabelWithCondition(?,?,?,?,?,?,?,?,?);
-sp_FindLabelByProductId=call sp_FindLabelByProductId(?);
-sp_FindProductByLabelId=call sp_FindProductByLabelId(?);
 #Product
 sp_InsertNewProduct=call sp_InsertNewProduct(?,?,?,?,?,?,?,?,?,?);
-sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?,?,?);
+sp_UpdateProduct=call sp_UpdateProduct(?,?,?,?,?,?,?,?,?,?);
 sp_UpdateProductPrice=call sp_UpdateProductPrice(?,?,?);
 sp_DeleteProduct=call sp_DeleteProduct(?,?);
 sp_CheckExistProduct=call sp_CheckExistProduct(?,?,?,?,?,?);
@@ -167,16 +166,17 @@ sp_FindProductByFilter=call sp_FindProductByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?
 sp_FindProductById=call sp_FindProductById(?);
 sp_FindProductByBrandId=call sp_FindProductByBrandId(?);
 sp_FindProductByCategoryId=call sp_FindProductByCategoryId(?);
-sp_CountAllProduct=call sp_CountAllProduct();
-sp_CountProductWithCondition=call sp_CountProductWithCondition(?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindProductByLabelId=call sp_FindProductByLabelId(?);
 sp_FindAccessoryByProductId=call sp_FindAccessoryByProductId(?);
 sp_FindProductByReleasedYear=call sp_FindProductByReleasedYear(?);
 sp_FindProductByPriceRange=call sp_FindProductByPriceRange(?,?);
+sp_CountAllProduct=call sp_CountAllProduct();
+sp_CountProductWithCondition=call sp_CountProductWithCondition(?,?,?,?,?,?,?,?,?,?,?,?,?);
 #UserRole
 sp_InsertUserRole=call sp_InsertUserRole(?,?);
 sp_DeleteUserRole=call sp_DeleteUserRole(?,?);
 #RefreshToken
-sp_InsertRefreshToken=call sp_InsertRefreshToken(?,?,?,?);
+sp_InsertRefreshToken=call sp_InsertRefreshToken(?,?);
 sp_FindRefreshTokenByCode=call sp_FindRefreshTokenByCode(?);
 sp_CountAllRefreshToken=call sp_CountAllRefreshToken();
 sp_CountRefreshTokenInDate=call sp_CountRefreshTokenInDate(?);
