[Resource - MAIN] Change some samples file

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -22,6 +22,7 @@ sp_CountProductImageWithCondition=call sp_CountProductImageWithCondition(?,?,?,?
 #ProductUnit
 sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?,?,?);
 sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?,?,?);
+sp_UpdateProductUnitProperties=call sp_UpdateProductUnitProperties(?,?,?,?,?);
 sp_DeleteProductUnit=call sp_DeleteProductUnit(?,?);
 sp_FindAllProductUnits=call sp_FindAllProductUnits(?,?,?,?);
 sp_FindProductUnitByFilter=call sp_FindProductUnitByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
@@ -86,6 +87,7 @@ sp_CheckExistComment=call sp_CheckExistComment(?,?,?,?,?);
 sp_FindAllComments=call sp_FindAllComments(?,?,?,?);
 sp_FindCommentByFilter=call sp_FindCommentByFilter(?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindCommentById=call sp_FindCommentById(?);
+sp_FindCommentByUserPhone=call sp_FindCommentByUserPhone(?);
 sp_FindCommentByRootCommentId=call sp_FindCommentByRootCommentId(?);
 sp_FindCommentByProductId=call sp_FindCommentByProductId(?);
 sp_CountAllComment=call sp_CountAllComment();
