[Resource - MAIN] Import Loss query

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -12,6 +12,7 @@ sp_InsertNewProductImage=call sp_InsertNewProductImage(?,?,?,?,?,?);
 sp_UpdateProductImage=call sp_UpdateProductImage(?,?,?,?,?,?,?);
 sp_UpdateProductImageUrlAndType=call sp_UpdateProductImageUrlAndType(?,?,?,?);
 sp_DeleteProductImage=call sp_DeleteProductImage(?,?);
+sp_CheckExistProductImage=call sp_CheckExistProductImage(?,?,?,?);
 sp_FindAllProductImages=call sp_FindAllProductImages(?,?,?,?);
 sp_FindProductImageByFilter=call sp_FindProductImageByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductImageById=call sp_FindProductImageById(?);
@@ -24,6 +25,7 @@ sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?,?,?);
 sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?,?,?);
 sp_UpdateProductUnitProperties=call sp_UpdateProductUnitProperties(?,?,?,?,?);
 sp_DeleteProductUnit=call sp_DeleteProductUnit(?,?);
+sp_CheckExistProductUnit=call sp_CheckExistProductUnit(?,?,?,?,?);
 sp_FindAllProductUnits=call sp_FindAllProductUnits(?,?,?,?);
 sp_FindProductUnitByFilter=call sp_FindProductUnitByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductUnitById=call sp_FindProductUnitById(?);
@@ -68,6 +70,7 @@ sp_InsertNewCart=call sp_InsertNewCart(?,?,?,?);
 sp_UpdateCart=call sp_UpdateCart(?,?,?,?);
 sp_DeleteCart=call sp_DeleteCart(?,?);
 sp_CheckExistCart=call sp_CheckExistCart(?,?);
+sp_FindCartById=call sp_FindCartById(?):
 sp_FindCartByUserId=call sp_FindCartByUserId(?);
 #Categor
 sp_InsertNewCategory=call sp_InsertNewCategory(?,?,?,?);
@@ -180,6 +183,7 @@ sp_DeleteUserRole=call sp_DeleteUserRole(?,?);
 #RefreshToken
 sp_InsertRefreshToken=call sp_InsertRefreshToken(?,?);
 sp_FindRefreshTokenByCode=call sp_FindRefreshTokenByCode(?);
+sp_FindRefreshTokenByUserId=call sp_FindRefreshTokenByUserId(?);
 sp_CountAllRefreshToken=call sp_CountAllRefreshToken();
 sp_CountRefreshTokenInDate=call sp_CountRefreshTokenInDate(?);
 #Role
