[Resource - MAIN] update new setDefaultAddress

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -43,6 +43,7 @@ sp_FindAddressById=call sp_FindAddressById(?);
 sp_FindAddressByUserId=call sp_FindAddressByUserId(?);
 sp_CountAllAddress=call sp_CountAllAddress();
 sp_CountAddressWithCondition=call sp_CountAddressWithCondition(?,?,?,?,?,?,?,?,?,?,?,?);
+sp_SetDefaultAddressOfUser=call sp_SetDefaultAddressOfUser(?,?,?);
 #Banner
 sp_InsertNewBanner=call sp_InsertNewBanner(?,?,?,?,?,?,?);
 sp_UpdateBanner=call sp_UpdateBanner(?,?,?,?,?,?,?,?);
@@ -199,8 +200,8 @@ sp_FindRoleByUserId=call sp_FindRoleByUserId(?);
 sp_CountAllRole=call sp_CountAllRole();
 sp_CountRoleWithCondition=call sp_CountRoleWithCondition(?,?,?,?,?,?,?);
 #User
-sp_InsertNewUser=call sp_InsertNewUser(?,?,?,?,?,?,?,?);
-sp_UpdateUser=call sp_UpdateUser(?,?,?,?,?,?,?,?,?);
+sp_InsertNewUser=call sp_InsertNewUser(?,?,?,?,?,?,?);
+sp_UpdateUser=call sp_UpdateUser(?,?,?,?,?,?,?,?);
 sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?,?);
 sp_UpdateUserPassword=call sp_UpdateUserPassword(?,?,?);
 sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?,?);
