[Resource - query.properties] Remake check exist brand

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -60,7 +60,7 @@ sp_CountBannerWithCondition=call sp_CountBannerWithCondition(?,?,?,?,?,?,?,?,?,?
 sp_InsertNewBrand=call sp_InsertNewBrand(?,?,?,?,?);
 sp_UpdateBrand=call sp_UpdateBrand(?,?,?,?,?,?);
 sp_DeleteBrand=call sp_DeleteBrand(?,?);
-sp_CheckExistBrand=call sp_CheckExistBrand(?,?,?,?);
+sp_CheckExistBrand=call sp_CheckExistBrand(?,?,?);
 sp_FindAllBrands=call sp_FindAllBrands(?,?,?,?);
 sp_FindBrandByFilter=call sp_FindBrandByFilter(?,?,?,?,?,?,?,?,?,?,?);
 sp_FindBrandById=call sp_FindBrandById(?);
