[Resource - query.properties] Remake check exist (1)

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -127,7 +127,7 @@ sp_UpdateInvoice=call sp_UpdateInvoice(?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_UpdateInvoiceOrderStatus=call sp_UpdateInvoiceOrderStatus(?,?,?);
 sp_UpdateInvoicePaymentTypeAndPaidStatus=call sp_UpdateInvoicePaymentTypeAndPaidStatus(?,?,?,?);
 sp_DeleteInvoice=call sp_DeleteInvoice(?,?);
-sp_CheckExistInvoice=call sp_CheckExistInvoice(?,?,?,?,?,?);
+sp_CheckExistInvoice=call sp_CheckExistInvoice(?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindAllInvoices=call sp_FindAllInvoices(?,?,?,?);
 sp_FindInvoiceByFilter=call sp_FindInvoiceByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindInvoiceById=call sp_FindInvoiceById(?);
@@ -191,7 +191,7 @@ sp_CountRefreshTokenInDate=call sp_CountRefreshTokenInDate(?);
 sp_InsertNewRole=call sp_InsertNewRole(?,?,?);
 sp_UpdateRole=call sp_UpdateRole(?,?,?,?);
 sp_DeleteRole=call sp_DeleteRole(?,?);
-sp_CheckExistRole=call sp_CheckExistRole(?,?,?,?,?,?);
+sp_CheckExistRole=call sp_CheckExistRole(?,?);
 sp_FindAllRoles=call sp_FindAllRoles(?,?,?,?);
 sp_FindRoleByFilter=call sp_FindRoleByFilter(?,?,?,?,?,?,?,?,?);
 sp_FindRoleById=call sp_FindRoleById(?);
@@ -206,7 +206,7 @@ sp_UpdateUserInformation=call sp_UpdateUserInformation(?,?,?,?,?,?);
 sp_UpdateUserPassword=call sp_UpdateUserPassword(?,?,?);
 sp_UpdateUserAccountStatus=call sp_UpdateUserAccountStatus(?,?,?);
 sp_DeleteUser=call sp_DeleteUser(?,?);
-sp_CheckExistUser=call sp_CheckExistUser(?,?,?,?,?,?);
+sp_CheckExistUser=call sp_CheckExistUser(?,?,?,?,?);
 sp_FindAllUsers=call sp_FindAllUsers(?,?,?,?);
 sp_FindUserByFilter=call sp_FindUserByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindUserById=call sp_FindUserById(?);
