[features - export] Build some samples for export files

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,15 +4,11 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/laptech
-    username: nhatphi
-    password: 123
+    url: jdbc:mysql://103.200.23.139:3306/youtube2_laptech?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+    username: youtube2_fi
+    password: qwerty!23456
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
   main:
     allow-circular-references: true
-
-#springdoc:
-#  swagger-ui:
-#    path: /swagger-ui.html
