--- a/pom.xml
+++ b/pom.xml
@@ -82,15 +82,14 @@
         <dependency>
             <groupId>com.mservice</groupId>
             <artifactId>mservice</artifactId>
-            <scope>system</scope>
             <version>1.0</version>
-            <systemPath>${basedir}/libs/momopayment-1.0.jar</systemPath>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.20</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -133,6 +132,13 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>mservice</id>
+            <url>file://${project.basedir}/libs</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -147,7 +153,7 @@
                         </exclude>
                     </excludes>
                     <profiles>
-                        <profile>dev</profile>
+<!--                        <profile>dev</profile>-->
 <!--                        <profile>prod</profile> -->
                     </profiles>
                 </configuration>
