[filter - Product] Fix bug null params

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -168,7 +168,7 @@ sp_UpdateProductPrice=call sp_UpdateProductPrice(?,?,?);
 sp_DeleteProduct=call sp_DeleteProduct(?,?);
 sp_CheckExistProduct=call sp_CheckExistProduct(?,?,?,?,?,?);
 sp_FindAllProducts=call sp_FindAllProducts(?,?,?,?);
-sp_FindProductByFilter=call sp_FindProductByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sp_FindProductByFilter=call sp_FindProductByFilter(?,?,?,?,?,?,?,?,?,?,?,?,?);
 sp_FindProductById=call sp_FindProductById(?);
 sp_FindProductByBrandId=call sp_FindProductByBrandId(?);
 sp_FindProductByCategoryId=call sp_FindProductByCategoryId(?);
