--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -219,3 +219,7 @@ sp_FindAllLogSystems=call sp_FindAllLogSystems(?,?,?,?);
 sp_FindLogSystemByFilter=call sp_FindLogSystemByFilter(?,?,?,?,?,?,?);
 sp_CountAllLogSystem=call sp_CountAllLogSystem();
 sp_CountLogSystemWithCondition=call sp_CountLogSystemWithCondition(?,?,?,?,?);
+#ResetPassword
+sp_InsertResetPasswordToken=call sp_InsertResetPasswordToken(?,?,?);
+sp_FindUserByResetPasswordToken=call sp_FindUserByResetPasswordToken(?);
+sp_FindResetPasswordTokenByToken=call sp_FindResetPasswordTokenByToken(?);
