[main - change] Block dev profile to run project

--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
                         </exclude>
                     </excludes>
                     <profiles>
-                        <profile>dev</profile>
+<!--                        <profile>dev</profile>-->
                     </profiles>
                 </configuration>
             </plugin>
